3B - update home - mobile - change font size product price on screen 375px

--- a/3B-WEB/assets/base/mobile.css
+++ b/3B-WEB/assets/base/mobile.css
@@ -151,4 +151,5 @@ a {text-decoration: none;}
 
 @media screen and (max-width: 375px) {
 	.home-mobile header .cart span {font-size: 9px;}
+	.home-mobile .box-p .box-p-meta .p-name .p-price {font-style: 13px;}
 }
