--- a/3B-WEB/assets/base/mobile.css
+++ b/3B-WEB/assets/base/mobile.css
@@ -47,7 +47,7 @@ a {text-decoration: none;}
 .home-mobile .box .box-items li a span {position: absolute;top: 0;display: block;width: 100%;height: 100%;padding: 20px 0;font-size: 14px;color: #FFFFFF;line-height: 28px;text-align: center;background: rgba(51, 51, 51, 0.7);}
 .home-mobile .box .box-items li a img {width: 68px;height: 68px;display: block;}
 
-.home-mobile .box-p {margin-bottom: 16px;width: 50%;padding: 0 3px;}
+.home-mobile .box-p {margin-bottom: 16px;width: 25%;padding: 0 3px;}
 .home-mobile .box-p .box-p-wrap {box-shadow: 0px 2.69261px 2.69261px rgba(0, 0, 0, 0.25);border-radius: 8px 8px 0 0;overflow: hidden;}
 .home-mobile .box-p .box-p-img {position: relative;}
 .home-mobile .box-p .box-p-img img {width: 100%;height: 188px;object-fit: cover;border-radius: 8px;}
@@ -64,11 +64,11 @@ a {text-decoration: none;}
 .home-mobile .box-p .box-p-meta .p-rating {font-size: 11px;line-height: 13px;color: #333333;display: flex;align-items: center;}
 .home-mobile .box-p .box-p-meta .p-rating img, .home-mobile .box-p .box-p-meta .p-rating span {margin-right: 3px;}
 
+/***** DO NOT ADD THIS STYLE - JUST FOR TEST ****/
+/*.home-mobile .content-wrapper {max-width: 768px;margin: 0 auto;}
+.home-mobile .container {max-width: 768px;}*/
+/***** ========================== *****/
 
-/*********/
-
-.home-mobile .content-wrapper {max-width: 480px;margin: 0 auto;}
-.home-mobile .container {max-width: 480px;}
 .home-mobile header {background: linear-gradient(180deg, #6633B9 0%, #C563EA 100%);}
 .home-mobile header .header-top {padding-top: 8px;padding-bottom: 8px;}
 .home-mobile header .row {display: flex;align-items: center;}
@@ -87,8 +87,8 @@ a {text-decoration: none;}
 .home-mobile header .cart a {position: relative;}
 .home-mobile header .cart a .total {position: absolute;top: -10px;right: 0;background: #FF2028;width: 20px;height: 20px;border-radius: 50%;font-size: 10px;line-height: 22px;text-align: center;}
 .home-mobile header .banner img {height: 155px;max-height: 155px;width: 100%;}
-.home-mobile header .banner-ads {margin-bottom: 12px;border-radius: 6px;overflow: hidden;}
-.home-mobile header .banner-ads img {width: 100%;max-height: 100px;}
+.home-mobile header .banner-ads {margin-bottom: 12px;border-radius: 8px;overflow: hidden;}
+.home-mobile header .banner-ads img {width: 100%;}
 
 .home-mobile .header-content {padding: 12px;}
 .home-mobile .header-content .hotsale-today {background: #FFFFFF;border-radius: 8px;padding: 14px 10px;margin-bottom: 12px;}
@@ -99,11 +99,18 @@ a {text-decoration: none;}
 .home-mobile .header-content .hotsale-today .pull-right {display: flex;align-items: center;}
 .home-mobile .header-content .hotsale-today .view-all {font-size: 26px;color: #EC5229;margin: 0 4px;}
 .home-mobile .header-content .hotsale-today .list-item {display: flex;align-items: center;justify-content: flex-start;padding: 0 0 12px;}
-.home-mobile .header-content .hotsale-today .list-item .item {width: 100px;position: relative;margin-right: 12px;}
+.home-mobile .header-content .hotsale-today .list-item .item {width: 20%;position: relative;margin-right: 12px;}
 .home-mobile .header-content .hotsale-today .list-item .item:last-child {margin-right: 0;}
-.home-mobile .header-content .hotsale-today .list-item .item .p-image {width: 100px;height: 100px;border-radius: 6px;}
+.home-mobile .header-content .hotsale-today .list-item .item .p-image {width: 100%;height: 110px;border-radius: 6px;}
 .home-mobile .header-content .hotsale-today .list-item .item .sale-label {position: absolute;top:0;left: 0;background: linear-gradient(102.14deg, #E33806 0%, #EC9229 91.73%);border-radius: 4px 0px 16px;color: #FFFFFF;width: auto;height: auto;font-size: 11px;padding: 4px 10px;}
-.home-mobile .header-content .hotsale-today .list-item .item .p-price {color: #FF2028;font-size: 9px;line-height: 24px;text-align: center;}
+.home-mobile .header-content .hotsale-today .list-item .item .p-price {color: #FF2028;font-size: 12px;line-height: 24px;text-align: center;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	word-break: break-all;
+	display: -webkit-box;
+	-webkit-line-clamp: 1;
+	-webkit-box-orient: vertical;
+}
 .home-mobile .header-content .hotsale-today .p-sold {position: relative;}
 .home-mobile .header-content .hotsale-today .progress {height: 18px;background: #CCCCD0;border-radius: 100px;position: relative;margin-bottom: 0;}
 .home-mobile .header-content .hotsale-today .progress .progress-bar {background: #EC5229;border-radius: 100px;}
@@ -112,11 +119,19 @@ a {text-decoration: none;}
 
 .home-mobile .header-content .featured {padding: 14px 10px;border-radius: 8px;background: #FFFFFF;}
 .home-mobile .header-content .featured ul {display: flex;flex-wrap: wrap;align-items: center;justify-content: space-around;}
-.home-mobile .header-content .featured ul li {margin: 0;padding: 0;background: transparent;width: auto;text-align: center;width: 25%;}
+.home-mobile .header-content .featured ul li {margin: 0;padding: 0;background: transparent;text-align: center;width: 12.5%;}
 .home-mobile .header-content .featured ul li span {display: block;font-weight: normal;color: #3F241D;font-size: 13px;line-height: 24px;}
 .home-mobile .header-content .featured ul li img {width: auto;margin-right: 0;}
 
-.home-mobile .header-bot {background:#F2F2F2 url('../images/new-design/mobile/bg-head-mobile.png') center top no-repeat;text-align: center;padding: 0 0 20px;background-size: cover;}
+.home-mobile .header-bot {
+	background-color: #F2F2F2;
+	background-position: center top;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-image: url('../images/new-design/mobile/bg-head-tablet.png');
+	text-align: center;
+	padding: 25px 0 25px;
+}
 .home-mobile .header-bot .btn-view {background: linear-gradient(180deg, #6633B9 0%, #A022FE 100%);color: #FFFFFF;border-radius: 16px;border: 1px solid #FFFFFF;padding: 8px 11px;font-size: 10px;font-weight: 500;}
 
 .home-mobile .menu-mobile {padding: 14px 12px;}
@@ -162,7 +177,32 @@ a {text-decoration: none;}
 .home-mobile .brands ul li:last-child {margin-right: 0;}
 .home-mobile .brands ul li img {width: auto;height: 50px;margin: 0 auto;}
 
+@media screen and (max-width: 640px) {
+	.home-mobile .header-content .featured ul li {width: 25%;}
+}
+
+@media screen and (max-width: 480px) {
+	.home-mobile .box-p {width: 50%;}
+
+	.home-mobile .header-content .hotsale-today .list-item .item {width: 100px;}
+	.home-mobile .header-content .hotsale-today .list-item .item .p-image {width: 100px;height: 100px;}
+	.home-mobile .header-bot {background-image: url('../images/new-design/mobile/bg-head-mobile.png');padding: 0 0 20px;}
+}
+
 @media screen and (max-width: 375px) {
-	.home-mobile header .cart span {font-size: 9px;}
 	.home-mobile .box-p .box-p-meta .p-name .p-price {font-style: 13px;}
+	
+	.home-mobile header .cart span {display: none;}
+	.home-mobile header .cart span.total {display: block;right: -10px;}
+	
+	.home-mobile .header-content .featured ul li {padding: 0 5px;}
+	.home-mobile .header-content .featured ul li span {
+		overflow: hidden;
+		text-overflow: ellipsis;
+		word-break: break-all;
+		display: -webkit-box;
+		-webkit-line-clamp: 1;
+		-webkit-box-orient: vertical;
+	}
+	.home-mobile .header-bot {padding: 0 0 8px;}
 }
