--- a/3B-WEB/assets/base/mobile.css
+++ b/3B-WEB/assets/base/mobile.css
@@ -17,7 +17,9 @@ a {text-decoration: none;}
 .home-mobile .title h3 {font-size: 15px;font-weight: 500;line-height: 22px;text-transform: uppercase;}
 .home-mobile .title h3 img {max-height: 18px;vertical-align: top;}
 .home-mobile .title a {position: absolute;top: 0;right: 0;color: #E33806;font-size: 14px;font-weight: 500;line-height: 22px;}
-.home-mobile .btn-loadmore {background: #EC5229;padding: 6px 30px;border-radius: 30px;color: #FFFFFF;font-size: 15px;line-height: 16px;}
+.home-mobile .btn {padding: 6px 30px;border-radius: 30px;color: #FFFFFF;font-size: 15px;line-height: 16px;}
+.home-mobile .btn.btn-loadmore {background: #EC5229;}
+.home-mobile .btn.btn-gradient {background: linear-gradient(87.62deg, #EC5229 16.73%, #FF814E 83.07%);}
 .home-mobile .wrap-line {
 	overflow: hidden;
 	text-overflow: ellipsis;
@@ -37,7 +39,7 @@ a {text-decoration: none;}
 .home-mobile .box {background: #FFFFFF;padding: 20px;border-radius: 8px;border: 1px solid #E0E0E0;margin-right: 16px;}
 .home-mobile .box:last-child {margin-right: 0;}
 .home-mobile .box .box-head {margin-bottom: 20px;}
-.home-mobile .box .box-head .box-img {width: 38px;height: 38px;float: left;margin-right: 18px;}
+.home-mobile .box .box-head .box-img {width: 38px;height: 38px;float: left;margin-right: 18px;border-radius: 50%;}
 .home-mobile .box .box-head h3 {font-size: 15px;line-height: 20px;color: #333333;}
 .home-mobile .box .box-head a {font-size: 12px;line-height: 16px;color: #2F80ED;}
 .home-mobile .box .box-items {display: flex;justify-content: flex-start;}
@@ -64,9 +66,36 @@ a {text-decoration: none;}
 .home-mobile .box-p .box-p-meta .p-rating {font-size: 11px;line-height: 13px;color: #333333;display: flex;align-items: center;}
 .home-mobile .box-p .box-p-meta .p-rating img, .home-mobile .box-p .box-p-meta .p-rating span {margin-right: 3px;}
 
+.home-mobile .breadcrumb {margin: 0;padding: 8px 9px;background: #FFFFFF;}
+.home-mobile .breadcrumb ul {display: flex;align-items: center;justify-content: flex-start;}
+.home-mobile .breadcrumb ul li {font-size: 13px;padding: 0 8px;position: relative;color: #3F241D;}
+.home-mobile .breadcrumb ul li:first-child {padding-left: 0;}
+.home-mobile .breadcrumb ul li::after {content: "\f105";position: absolute;top: 0;right: -4px;font: normal normal normal 15px/18px FontAwesome;}
+.home-mobile .breadcrumb ul li:last-child::after {content: "";}
+.home-mobile .breadcrumb ul li a {color: #979797;}
+
+.home-mobile .states {display: flex;align-items: center;justify-content: space-evenly;}
+.home-mobile .states .item {text-align: center;}
+.home-mobile .states .item .total {font-size: 15px;line-height: 22px;font-weight: 500;}
+.home-mobile .states .item .total img {max-width: 20px;margin-right: 4px;float: left;}
+.home-mobile .states .item label {font-size: 14px;font-weight: normal;color: #BDBDBD;}
+
+.home-mobile .search-result {}
+.home-mobile .search-result .box {border: none;margin: 0;padding: 14px 9px;border-radius: 0;border-bottom: 4px solid #E0E0E0;}
+.home-mobile .search-result .box .box-head {display: flex;align-items: center;justify-content: space-between;padding-bottom: 10px;margin-bottom: 10px;border-bottom: 1px solid #f5f5f5;}
+.home-mobile .search-result .box .box-head .box-img {margin-right: 8px;float: none;}
+.home-mobile .search-result .box .box-head a.btn {color: #FFFFFF;font-size: 14px;padding: 6px 15px;width: 105px;margin-left: 4px;}
+.home-mobile .search-result .box .box-head .details {width: 68%;display: flex;align-items: center;}
+.home-mobile .search-result .box .box-head .details .s-title {width: 80%;}
+.home-mobile .search-result .box .box-head .details .meta {display: flex;flex-wrap: wrap;}
+.home-mobile .search-result .box .box-head .details .meta label {font-weight: normal;color: #BDBDBD;font-size: 13px;margin-right: 6px;}
+.home-mobile .search-result .box .box-head .details .meta label:last-child {margin-right: 0;}
+.home-mobile .search-result .box .box-head .details .meta label span {color: #333333;font-weight: 500;}
+.home-mobile .search-result .box .box-head .actions {display: flex;align-items: center;justify-content: flex-end;}
+
 /***** DO NOT ADD THIS STYLE - JUST FOR TEST ****/
-/*.home-mobile .content-wrapper {max-width: 768px;margin: 0 auto;}
-.home-mobile .container {max-width: 768px;}*/
+.home-mobile .content-wrapper {max-width: 768px;margin: 0 auto;}
+.home-mobile .container {max-width: 768px;}
 /***** ========================== *****/
 
 .home-mobile header {background: linear-gradient(180deg, #6633B9 0%, #C563EA 100%);}
@@ -150,7 +179,7 @@ a {text-decoration: none;}
 .home-mobile .hot-today {padding: 14px 12px;}
 .home-mobile .recommend-p {padding: 14px 12px;}
 
-.home-mobile .main-footer {font-size: 14px;line-height: 18px;padding: 14px 12px;margin-bottom: 85px;}
+.home-mobile .main-footer {font-size: 14px;line-height: 18px;padding: 14px 9px;margin-bottom: 85px;}
 .home-mobile .main-footer h3 {font-size: 15px;line-height: 20px;font-weight: 500;position: relative;color: #EC5229;text-transform: uppercase;margin-bottom: 8px;}
 .home-mobile .main-footer p {margin-bottom: 20px;color: #333333;}
 .home-mobile .footer-link li {margin-bottom: 14px;}
@@ -187,6 +216,8 @@ a {text-decoration: none;}
 	.home-mobile .header-content .hotsale-today .list-item .item {width: 100px;}
 	.home-mobile .header-content .hotsale-today .list-item .item .p-image {width: 100px;height: 100px;}
 	.home-mobile .header-bot {background-image: url('../images/new-design/mobile/bg-head-mobile.png');padding: 0 0 20px;}
+
+	.home-mobile .search-result .box .box-head a.btn {width: 90px;padding: 6px 14px;}
 }
 
 @media screen and (max-width: 400px) { /* for some x-screen */
@@ -208,8 +239,13 @@ a {text-decoration: none;}
 		-webkit-box-orient: vertical;
 	}
 	.home-mobile .header-bot {padding: 0 0 8px;}
+
+	.home-mobile .search-result .box .box-head .actions {flex-direction: column-reverse;}
+	.home-mobile .search-result .box .box-head a.btn {margin-bottom: 4px;font-size: 13px;padding: 4px 12px;width: 85px;}
 }
 
 @media screen and (max-width: 320px) {
 	.home-mobile .box-p .box-p-img img {height: 145px;}
+
+	.home-mobile .states .item .total {font-size: 13px;}
 }
