--- a/3B-WEB/assets/base/mobile.css
+++ b/3B-WEB/assets/base/mobile.css
@@ -213,7 +213,7 @@ a {text-decoration: none;}
 .home-mobile header .search-box .input-group-btn .btn {background: #C563EA;padding: 4px 8px;border-radius: 4px;}
 .home-mobile header .search-box .input-group-btn .btn img {width: 18px;}
 .home-mobile header .cart {display: flex;align-items: flex-end;justify-content: space-around;}
-.home-mobile header .cart span {display: block;color: #F2F2F2;font-size: 10px;font-style: normal;font-weight: normal;text-transform: capitalize;}
+.home-mobile header .cart span {display: block;color: #F2F2F2;font-size: 10px;line-height: 15px;font-style: normal;font-weight: normal;text-transform: capitalize;}
 .home-mobile header .cart img {margin-left: -3px;width: 20px;}
 .home-mobile header .cart a {position: relative;}
 .home-mobile header .cart a .total {position: absolute;top: -10px;right: 0;background: #FF2028;width: 20px;height: 20px;border-radius: 50%;font-size: 10px;line-height: 22px;text-align: center;}
@@ -374,7 +374,7 @@ a {text-decoration: none;}
 	.home-mobile .results .filter-bl .select2-container {width: 112px;}
 }
 
-@media screen and (-webkit-min-device-pixel-ratio:0) { 
+@media only screen and (max-device-width: 480px) { 
 	select, textarea, input {font-size: 16px;}
 }
 
