--- a/3B-WEB/assets/base/mobile.css
+++ b/3B-WEB/assets/base/mobile.css
@@ -138,14 +138,15 @@ a {text-decoration: none;}
 .home-mobile .search-result .box .box-head .details .meta label span {color: #333333;font-weight: 500;}
 .home-mobile .search-result .box .box-head .actions {display: flex;align-items: center;justify-content: flex-end;}
 
-.home-mobile .advance-search {display: none;position: absolute;top: 65px;left: 0;right: 0;background: #FFFFFF;width: 100%;padding: 20px;z-index: 99;box-shadow: 0px 5px 15px 0px rgb(0 0 0 / 30%);
+.home-mobile .advance-search {display: none;position: absolute;top: 65px;left: 0;right: 0;background: #FFFFFF;width: 100%;padding: 20px;z-index: 99;box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.3);
 	transition: all 280ms ease-in-out;
 	-moz-transition: all 280ms ease-in-out;
 	-webkit-transition: all 280ms ease-in-out;
 	-o-transition: all 280ms ease-in-out;
 }
 .home-mobile .advance-search.active {display: block;}
-.home-mobile .advance-search h4 {font-size: 14px;color: #979797;font-weight: normal;margin-bottom: 8px;}
+.home-mobile .advance-search h4 {font-size: 14px;color: #979797;font-weight: normal;margin-bottom: 4px;position: relative;line-height: 22px;}
+.home-mobile .advance-search h4 .btn {position: absolute;right: 0;padding: 2px 12px;font-size: 12px;}
 .home-mobile .advance-search .search-by {margin: 0 -20px 12px;padding: 0 20px 12px 20px;border-bottom: 1px solid #E0E0E0;}
 .home-mobile .advance-search .search-by .boxes {justify-content: space-evenly;}
 .home-mobile .advance-search .search-by .boxes span {font-size: 14px;font-weight: 500;color: #3F241D;}
@@ -159,6 +160,15 @@ a {text-decoration: none;}
 .home-mobile .advance-search .search-list {}
 .home-mobile .advance-search .search-list li {padding: 6px 0;border-bottom: 1px solid #F2F2F2;}
 .home-mobile .advance-search .search-list li a {color: #333333;font-size: 14px;display: block;}
+.home-mobile .advance-search .results .search-list {margin-bottom: 12px;}
+.home-mobile .advance-search .results .search-list li a {line-height: 30px;text-align: left;}
+.home-mobile .advance-search .results .search-list li a span {display: block;width: 30px;height: 30px;float: left;border-radius: 50%;overflow: hidden;margin-right: 4px;}
+.home-mobile .advance-search .results .search-list li a span img {width: 100%;height: 100%;}
+
+.home-mobile .advance-search .results {display: none;text-align: center;}
+.home-mobile .advance-search .results.active {display: block;}
+.home-mobile .advance-search .results h4 {text-align: left;}
+.home-mobile .advance-search .search-store .btn-loadmore {font-size: 13px;padding: 4px 16px;}
 
 .home-mobile .search-by-cat {margin-bottom: 24px;}
 .home-mobile .search-by-cat .boxes {margin-left: -8px;margin-right: -8px;margin-top: -4px;}
